8287901: Loom: Failures with -XX:+VerifyStack